DREAM project information

--- a/FR/LEROY_M2_ISIR_2017_internship_thesis.tex
+++ b/FR/LEROY_M2_ISIR_2017_internship_thesis.tex
@@ -79,6 +79,15 @@ J'ai réalisé mon stage de fin d'études au sein de l'équipe AMAC, encadré pa
 
 Détails du projet Dream.
 
+Une partie des membres de l'équipe AMAC travaille sur le projet DREAM (3 chercheurs, 2 post-doctorants, 3 doctorants et 4 stagiaires).
+Seung Su, Léni et Jonathan : tracking d'objets et création de \textit{saliency map}.
+Carlos : Apprentissage d'affordance
+Pierre : reconnaissance de formes ?
+
+Au terme de ce projet, les différents travaux de recherche des différents membres ont vocation à s'imbriquer les uns avec les autres dans le but de fournir un système global, allant de la détection et le suivi d'objet, à l'apprentissage d'affordances en passant par l'apprentissage de lancers de balle.
+
+La Coruna : travaux sur les motivations extrinsèques.
+
 \subsection{Environnement}
 
 L'environnement de travail durant notre stage a consisté en différents modules reliés entre eux : ROS,  le simulateur  Gazebo, le framework Moveit et le robot Baxter. ROS is \textit{a flexible framework for writing robot software. It is a collection of tools, libraries, and conventions that aim to simplify the task of creating complex and robust robot behavior across a wide variety of robotic platforms\footnote{http://www.ros.org/about-ros/}}.
