Sensorimotor babbling with Novelty Search

--- a/FR/LEROY_M2_ISIR_2017_internship_thesis.bib
+++ b/FR/LEROY_M2_ISIR_2017_internship_thesis.bib
@@ -255,3 +255,14 @@ keywords={humanoid robots;learning (artificial intelligence);affordance-based im
 doi={10.1109/IROS.2007.4399517},
 ISSN={2153-0858},
 month={Oct},}
+
+@INPROCEEDINGS{5949955, 
+author={J. Lehman and K. O. Stanley},
+booktitle={2011 IEEE Congress of Evolutionary Computation (CEC)},
+title={Improving evolvability through novelty search and self-adaptation},
+year={2011},
+pages={2693-2700},
+keywords={evolutionary computation;legged locomotion;search problems;biped locomotion experiment;evolutionary algorithm;evolvability improvement;natural evolution;novelty search;self-adaptation;Artificial neural networks;Evolution (biology);Legged locomotion;Measurement;Robot sensing systems;Search problems},
+doi={10.1109/CEC.2011.5949955},
+ISSN={1089-778X},
+month={June},}
