--- a/FR/LEROY_M2_ISIR_2017_internship_thesis.tex
+++ b/FR/LEROY_M2_ISIR_2017_internship_thesis.tex
@@ -38,11 +38,6 @@ Université Claude Bernard Lyon 1, France}
   %  \end{center}
 \maketitle
 
-
-\begin{abstract}
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-\end{abstract}
-
 \keywords{Robotique développementale, affordance, clusterisation d'effets}
 
 % \tableofcontents
@@ -353,7 +348,7 @@ Afin d'obtenir des jeux de données contenant les différents effets à apprendr
 \begin{figure}[ht]
   \begin{center}
   \includegraphics[width=0.7\textwidth]{figures/ns_trajectory.png}
-  \caption{Le point rouge correspond au point de départ de l'effecteur du robot. Le tracé en bleu correspond à la trajectoire de cet effecteur vers l'objet. L'étoile verte indique la position de l'objet à la fin de l'exécution de la trajectoire de l'effecteur.}
+  \caption{Le rectangle rouge indique la position du robot. Le point rouge correspond au point de départ de l'effecteur du robot. Le tracé en bleu correspond à la trajectoire de cet effecteur vers l'objet. L'étoile verte indique la position de l'objet à la fin de l'exécution de la trajectoire de l'effecteur.}
   \label{fig:ns_traj}
   \end{center}
 \end{figure}
@@ -380,11 +375,11 @@ Les meilleurs paramètres trouvés dans l'étape précédente sont utilisés pou
 
 \section{Future works \& Perspectives}
 
-Plusieurs axes d'améliorations peuvent être proposés. Nous avons testé l'algorithme présenté ci-dessus avec un seul algorithme de clustering, Mean Shift. Le premier axe consisterait à tester davantage d'algorithmes de clustering, tels qu'Affinity Propagation, Birch ou DBSCAN. Un second axe d'amélioration pourrait être de tester l'algorithme avec des tâches plus complexe.
+Plusieurs axes d'améliorations peuvent être proposés. Durant ce stage, nous avons testé l'algorithme présenté ci-dessus avec un seul algorithme de clustering, \textit{Mean Shift}. Le premier axe d'amélioration consisterait à tester davantage d'algorithmes de clustering, tels qu'\textit{Affinity Propagation}, \textit{Birch} ou \textit{DBSCAN}. Un second axe d'amélioration pourrait être de tester l'algorithme avec des tâches plus complexes.
 
 \section{Conclusion}
 
-Ce stage de fin d'etudes m'a permis de davantage découvrir le domaine de la robotique développementale, après la brève introduction que nous avons eu durant le semestre de M2 à Lyon. Ce domaine de recherche est fascinant et très intéressant dans la mesure où les chercheurs tendent à créer des robots qui pourraient boostrap from almost no knowledge. Le lien étroit entre neurosciences et spécialement neurosciences cognitives permet d'implémenter des modèles présent chez l'être humain.
+Ce stage de fin d'études de Master 2 m'a permis de davantage découvrir le domaine de la robotique développementale et ce qu'il implique, après la brève introduction que nous avons eu durant le semestre de M2 à Lyon. Ce domaine de recherche est fascinant et très intéressant dans la mesure où les chercheurs tendent à créer des robots qui pourraient boostrap from almost no knowledge. Le lien étroit entre neurosciences et spécialement neurosciences cognitives permet d'implémenter des modèles présent chez l'être humain.
 
 % \section*{Annexe}
 % % \addcontentsline{toc}{chapter}{Annex}
