--- a/FR/LEROY_M2_ISIR_2017_internship_thesis.tex
+++ b/FR/LEROY_M2_ISIR_2017_internship_thesis.tex
@@ -47,15 +47,11 @@ Université Claude Bernard Lyon 1, France}
 % \addcontentsline{toc}{chapter}{Acknowledgement}
 
 Mon stage de 6 mois au sein de l'équipe AMAC à l'ISIR fût une formidable expérience. Je voudrai remercier Stéphane Doncieux, Alexandre Coninx et Carlos Maestre pour leur support et les nombreux conseils avisés qu'ils m'ont donnés.
-Bénéficier de leur expérience et savoir a été un véritable atout pour mener à bien ce stage. Par ailleurs, ces 6 mois au sein de l'ISIR m'ont donné l'opportunité de découvrir davantage le monde de la recherche.
+Bénéficier de leur expérience et savoirs a été un véritable atout pour mener à bien ce stage.
 
-L'ISIR est un excellent laboratoires de robotique en France et avoir la possibilité d'y faire un stage a été une extraordinaire opportunité. Mon stage de 6 mois au sein de l'équipe AMAC fût une formidable expérience, notamment parce que j'ai pu travailler sur un domaine passionnant et relativement jeune, la robotique développementale.
+L'ISIR est un excellent laboratoires de robotique en France et avoir la possibilité d'y faire un stage a été une extraordinaire opportunité. Mon stage de 6 mois au sein de l'équipe AMAC fût une formidable expérience, notamment parce que j'ai pu travailler sur un domaine passionnant et relativement jeune, la robotique développementale. Par ailleurs,  cette immersion dans un laboratoire de recherche m'a donné l'opportunité de découvrir davantage le monde de la recherche.
 
-Je voudrai remercier Stéphane Doncieux, Alexandre Coninx et Carlos Maestre pour leurs nombreux conseils avisés et pour toute l'aide dont ils ont fait preuve à mon égard. Avoir pu béneficié de leur expérience et de leur savoir est un atout non négligeable pour mes travaux futurs. Par ailleurs, cette immersion dans un laboratoire de recherche m'a permis de mieux cerner différents aspects de la recherche que je m'attendais pas à rencontrer.
-
-Reprendre des études en 2016 après avoir travaillé quelques années a été un véritable défi pour moi. En effet, cela supposait de quitter la ville où je vivais, de quitter mes amis et mon confort matériel ainsi que de revenir sur les bancs de l'université et de beaucoup travailler. J'allais avoir 30 ans et je me demandais si j'allais réussir dans ce Master 2.
-
-Reprendre des études en 2016 après avoir travaillé quelques années a été un véritable défi pour moi. En effet, cela supposait de quitter la ville où je vivais, de quitter mes amis et mon confort matériel ainsi que de revenir sur les bancs de l'université et de beaucoup travailler. J'allais avoir 30 ans et je me demandais si j'allais réussir dans ce Master 2.
+Reprendre des études en 2016 après avoir travaillé quelques années a été un véritable défi pour moi. En effet, cela supposait de quitter la ville où je vivais, mes amis et mon confort matériel ainsi que de revenir sur les bancs de l'université. J'allais avoir 30 ans et je me demandais si j'allais réussir dans ce Master 2.
 
 % I am very glad to have the opportunity to pursue my works in PhD in the current months.
 
@@ -83,16 +79,16 @@ Mon stage a été financé dans le cadre le projet DREAM\footnote{http://www.rob
 Une partie des membres de l'équipe AMAC travaille sur le projet DREAM (3 chercheurs, 2 post-doctorants, 3 doctorants et 4 stagiaires).
 Seung Su, Léni et Jonathan : tracking d'objets et création de \textit{saliency map}.
 
-Par exemple, plusieurs personnes travaillent sur la perception interactive. L'idée principale de la discipline est que pour segmenter des éléments (en l'occurrence des objects manipulables) dans une scène quelconque on ne peut pas se baser sur un a priori et pour compenser cela on va interagir avec l'environnement afin d'acquérir cette information. Le but d'un babillage est donc de produire une base de données. Une partie consiste à segmenter ce qui bouge et une autre doit pouvoir segmenter chaque objet. La segmentation de Leni me permet d'initialiser des hypothèses d'objets (ensemble de supervoxels) avec lesquels le robot interagis afin de valider ou non l'appartenance des supervoxels à un unique objet. La base de données qui est construite contient pour chaque objet les exemples de supervoxels qui lui ont été attribué.
+Par exemple, plusieurs personnes travaillent sur la perception interactive. L'idée principale de la discipline est que pour segmenter des éléments (en l'occurrence des objects manipulables) dans une scène quelconque on ne peut pas se baser sur un a priori. Pour compenser cela, l'on va interagir avec l'environnement afin d'acquérir cette information. Le but d'un babillage est donc de produire une base de données. Une partie consiste à segmenter ce qui bouge et une autre doit pouvoir segmenter chaque objet. La segmentation de Leni me permet d'initialiser des hypothèses d'objets (ensemble de supervoxels) avec lesquels le robot interagit afin de valider ou non l'appartenance des supervoxels à un unique objet. La base de données qui est construite contient pour chaque objet les exemples de supervoxels qui lui ont été attribué.
 
 Carlos : Apprentissage d'affordance
 Pierre : reconnaissance de formes ?
 
-DREAM (Deferred Restructuring of Experience in Autonomous Machines) soit Restructuration différée de l'expérience dans les machines autonomes est un projet est financé par le programme de recherche et d'innovation H2020 de l'Union Européenne. Ce projet de robotique incorpore des processus de sommeile et l'équivalent de rêves au sein d'une architecture cognitive, dans le but de consolider leur expérience et donc améliorer leur capacité à apprendre et à s'adapter.
+DREAM (Deferred Restructuring of Experience in Autonomous Machines) soit Restructuration différée de l'expérience dans les machines autonomes est un projet financé par le programme de recherche et d'innovation H2020 de l'Union Européenne. Ce projet a pour objectif d'incorporer un processus de sommeil et l'équivalent de rêves au sein d'une architecture cognitive, dans le but de consolider leur expérience et donc améliorer leur capacité à apprendre et à s'adapter.
 
 % Les différents partenaires académiques disposent de 5 robots pour mener à bien ce projet : le robot Meka\footnote{https://en.wikipedia.org/wiki/Meka_Robotics}, PR2 de Willow Garage, plusieurs Thymio-2\footnote{https://www.thymio.org/en:thymio}, le bras robotique CrustCrawler\footnote{http://www.crustcrawler.com/} ainsi que le robot baxter de Rethink Robotics. Les 4 derniers robots sont présents au sein de l'ISIR.
 
-Les différents partenaires académiques disposent de 5 robots pour mener à bien ce projet : le robot Meka, PR2 de Willow Garage, plusieurs Thymio-2, le bras robotique CrustCrawlerainsi que le robot baxter de Rethink Robotics. Les 4 derniers robots sont présents au sein de l'ISIR.
+Les différents partenaires académiques disposent de 5 robots pour mener à bien ce projet : le robot Meka, PR2 de Willow Garage, plusieurs Thymio-2, le bras robotique CrustCrawler ainsi que le robot Baxter de Rethink Robotics. La majorité des robots est présente au sein de l'ISIR.
 
 Accumuler de la connaissance nécessite des processus de consolidation afin d'éviter d'être submergé par les informations. Le sommeil crucial pour la restructuration des représentations, maintenir l'intégratione et la cohérence de la connaissance, amélioration de l'apprentissage et la formation d'abstraction.
 
@@ -105,11 +101,8 @@ Selon DREAM, le cerveau de compose de 3 sous-systèmes : modèles, politique, va
 Alternance entre interaction active et introspection passive.
 
 Détails du projet Dream.
-
-Une partie des membres de l'équipe AMAC travaille sur le projet DREAM (3 chercheurs, 2 post-doctorants, 3 doctorants et 4 stagiaires).
-Seung Su, Léni et Jonathan : tracking d'objets et création de \textit{saliency map}.
-Carlos : Apprentissage d'affordance
-Pierre : reconnaissance de formes ?
+Détails des différents objectifs.
+Description des différentes waves.
 
 Au terme de ce projet, les différents travaux de recherche des différents membres ont vocation à s'imbriquer les uns avec les autres dans le but de fournir un système global, allant de la détection et le suivi d'objet, à l'apprentissage d'affordances en passant par l'apprentissage de lancers de balle.
 
@@ -121,8 +114,8 @@ Medias are nowadays talking about smart robots for tomorrow or the day after tom
 
 % Developmental robotics
 
-La robotique développementale est un domaine de recherche relativement jeune. Il dérive principalement de la robotique mais tire également ses racines des neurosciences cognitives.
-Apprentissage autonome, généralisation
+La robotique développementale constitue un domaine de recherche relativement jeune. Il dérive principalement de la robotique mais tire également ses racines des neurosciences cognitives.
+Apprentissage autonome, généralisation.
 Plus efficace de créer un robot qui apprend qu'un robot auquel on apprend beaucoup de choses.
 
 %% Affordances
@@ -160,7 +153,7 @@ L'apprentissage des affordances est une étape cruciale dans l'approche de la ro
   \end{tikzpicture}
 
   \label{fig:affordances}
-	\caption{Relationship between Actions, Ojects and Effects.}
+	\caption{Relation entre Objets, Actions et Effets.}
 
 \end{figure}
 
@@ -178,6 +171,9 @@ Another approach is presented in \cite{Maestre2015} where Maestre et al. describ
 \subsubsection{Intrinsic motivations}
 Une troisième approche réside dans les motivations intrinsèques. Ce concept a été décrit par Ryan et Deci, puis par Hull et plus tard formalisé en modèles computationnels par Oudeyer et Kaplan dans \cite{10.3389/neuro.12.006.2007}. Les motivations intrinsèques permettent d'explorer progressivement l'environnement en favorisant une spécialisation progressive des <modules>. Ce concept est utilisé en robotique et spécifiquement en robotique développementale.
 
+TODO : Définition de motivations intrinsèques, extrinsèques, internes et externes. Equivalent à la Curiosité.
+
+
 % A third approache resides in intrinsic motivations, a concept described by Ryan and Deci, then by Hull and later formalized in computational models by Oudeyer and Kaplan \cite{10.3389/neuro.12.006.2007}. Intrinsic motivations allow to explore the environment by progressively specializing. Concept reused in robotics and especially in developmental robotics.
 
 Context: The ability to perform in an open-ended environment and to build on previously acquired knowledge to quickly adapt to changes and unknown situations is key to building
@@ -188,12 +184,13 @@ Cognitive Developmental robotics is a promising approach to create robots with h
 
 %% Use of tools
 \subsubsection{Utilisation d'outils}
-Au delà des affordances, des recherches prometteuses se concentrent sur la manipulation d'outils. Dans \cite{Goncalves2014}, Gonçalves et al. proposent une approche intéressante pour apprendre les afforfances visuelles d'objets ou d'outils. Dans cet article, un robot apprend les caractéristique visuelles d'objets et d'outils à l'aide de descripteurs visuels. De de façon, ils montrent que le robot est capable de réaliser une action spécifique ou d'obtenir un résultat désiré. L'utilisation des descripteurs visuels permet au robot de généraliser avec des objets inconnus.
+Au delà des affordances, des recherches prometteuses se concentrent sur la manipulation d'outils. Dans \cite{Goncalves2014}, Gonçalves et al. proposent une approche intéressante pour apprendre les affordances visuelles d'objets ou d'outils. Dans cet article, un robot apprend les caractéristique visuelles d'objets et d'outils à l'aide de descripteurs visuels. De cette façon, ils montrent que le robot est capable de réaliser une action spécifique ou d'obtenir un résultat désiré. L'utilisation des descripteurs visuels permet au robot de généraliser avec des objets inconnus.
 
 % Beyond affordances, promising researches focused on tool usage. In \cite{Goncalves2014}, Gonçalves et al. proposed an interesting approach to learn visual affordances of objects and tools. In that paper, a robot learned visual features of objects and tools by using visual descriptors. Then, they show that the robot is able to perform a specific action or obtain a desired result. The use of visual descriptors allow the robot to generalize with unknown objects.
 
 %% Bayesian network
-Once sensorimotor babbling has been performed, the relationships between objects, actions and effects need to be modeled. Bayesian networks are a method to achieve that. They are probabilistic model that represent the relationship between their variables. In \cite{4456755}, Montesano \textit{et al} presented a Bayesian betwork model for learning object affordances.
+\subsubsection{Réseaux bayésiens}
+Une fois que le babillage sensorimoteur a été réalisé, les relations entre les objets, actions et effets nécessitent d'être modélisées. Les réseaux bayésiens constituent une méthode pour réaliser cela. Ce sont des modèles probablistes qui représentent les relations entre leurs variables. Dans \cite{4456755}, Montesano et al. présentent un modèle de réseau bayésien qui permet d'apprendre des affordances concernant des objets.
 
 Our work focused on improving the paper of \cite{Ugur2011}. In that paper, Ugur \textit{et al}.
 described a system that allows a robot to learn goal emulation by using learnt affordances. In order to that, the robot follows an observation stage then an imitation stage.
@@ -205,7 +202,7 @@ described a system that allows a robot to learn goal emulation by using learnt a
 
 Ce stage de fin d'études l'a été dans le cadre du projet DREAM, débuté en 2015. Ce projet implique 5 partenaires académiques: UMPC/CNRS (coordinateur), ENSTA ParisTech, Universidade da Coruña, Vrije Universiteit Amsterdam et Queen Mary University of London. Ces différents acteurs ont différents rôles au sein du projet DREAM. See waves.
 
-% \`A l'issue du projet DREAM, les différents modules
+% \`A l'issue du projet DREAM, les différents modules ont vocation
 At the end of the DREAM project, the different modules are aimed at be linked together.
 
 Our work is directly based on actual PhD student's work on learning affordances inspired from motor babbling.
@@ -420,7 +417,7 @@ Durant la première étape, différents objets sont placés successivement sur l
 La seconde étape implique l'algorithme que nous avons présenté ci-dessus et tente de clusteriser les effets des jeux de données. Il en résulte une variété de paramètres qui peuvent être exploités durant la troisième étape.
 Les meilleurs paramètres trouvés dans l'étape précédente sont utilisés pour pousser les différents objects vers la zone cible.
 
-La première étape consiste donc en un babillage. Concrétement, la position de l'objet sur l'espace de travail est récupérée. Une trajectoire est générée par cinématique inverse et Novelty Search afin d'atteindre l'objet. Cet objet est positionné de façon aléatoire dans les intervalles [x;x] et [y;y].
+La première étape consiste donc en un babillage. Concrétement, la position de l'objet sur l'espace de travail est récupérée ainsi que la position de l'effecteur. Une trajectoire est ensuite générée à l'aide de la cinématique inverse et Novelty Search afin d'atteindre l'objet. Cet objet est positionné de façon aléatoire dans les intervalles [x;x] et [y;y].
 
 % During the first step, several different objects are placed on the table, one after another. Those objects have different properties: a box, a cylinder which and a cone. Some can be pushed from any face and will have the same behavior, whereas the other ones need to be pushed from a particular face to move significantly. The babbling with the different objects would result in a dataset of effects.
 % The second step implies the algorithm we presented above and tries to clusterize the effects in the dataset. As result, a variety of parameter can be exploited during the third stage.
