Modif about babbling

--- a/FR/LEROY_M2_ISIR_2017_internship_thesis.tex
+++ b/FR/LEROY_M2_ISIR_2017_internship_thesis.tex
@@ -165,7 +165,7 @@ Meltzoff et al. explained in \cite{EDP:EDP157} that infants do not know a priori
 \subsubsection{Motor babbling}
 Une première approche naïve consiste à utiliser des mouvements aléatoires. Cette approche est la plus simple à implémenter mais elle peut générer un nombre important de mouvements qui ne produisent pas de contact avec les objets.
 
-Another approach is presented in \cite{Maestre2015} where Maestre et al. described the use of Novelty Search, an evolutionary algorithm, in order to generate trajectories aimed at maximizing the environment's exploration. Results show that trajectories allowing to touch objects are more and more privilegied over the different generations.
+Une seconde approche est présentée dans dans \cite{Maestre2015} dans lequel Maestre et al. décrivent l'utilisation de Novelty Search, une algorithme évolutionnaire, afin de générer des trajectoires visant à maximiser l'exploration de l'environment. Les résultats montrent que les trajectoires permettant de toucher les objets sont davantage privilégiées au fur et à mesure des générations.
 
 %% Intrinsic motivations
 \subsubsection{Intrinsic motivations}
