--- a/FR/LEROY_M2_ISIR_2017_internship_thesis.tex
+++ b/FR/LEROY_M2_ISIR_2017_internship_thesis.tex
@@ -202,8 +202,8 @@ described a system that allows a robot to learn goal emulation by using learnt a
 
 Ce stage de fin d'études l'a été dans le cadre du projet DREAM, débuté en 2015. Ce projet implique 5 partenaires académiques: UMPC/CNRS (coordinateur), ENSTA ParisTech, Universidade da Coruña, Vrije Universiteit Amsterdam et Queen Mary University of London. Ces différents acteurs ont différents rôles au sein du projet DREAM. See waves.
 
-% \`A l'issue du projet DREAM, les différents modules ont vocation
-At the end of the DREAM project, the different modules are aimed at be linked together.
+\`A l'issue du projet DREAM, les différents modules doivent permettre de constituer un ensemble. 
+% At the end of the DREAM project, the different modules are aimed at be linked together.
 
 Our work is directly based on actual PhD student's work on learning affordances inspired from motor babbling.
 
@@ -223,7 +223,7 @@ Gazebo est un simulateur\footnote{http://gazebosim.org}. La figure \ref{fig7} do
 
 Moveit
 
-Quant au robot Baxter\footnote{http://www.rethinkrobotics.com/baxter/tech-specs/} (voir figure \ref{fig:baxter}), c'est un robot développé par Rethink Robotic et utilisé à la fois à des fin industrielles et de recherche. Ce robot antropormorphique à 2 bras dispose de 2 fois 7 degrés de liberté et de multiples  senseurs\footnote{http://sdk.rethinkrobotics.com/wiki/Hardware\_Specifications}.
+Quant au robot Baxter\footnote{http://www.rethinkrobotics.com/baxter/tech-specs/} (voir figure \ref{fig:baxter}), c'est un robot développé par Rethink Robotic et utilisé à la fois à des fin industrielles et de recherche. Ce robot antropormorphique à 2 bras dispose de 2 fois 7 degrés de liberté et de multiples senseurs\footnote{http://sdk.rethinkrobotics.com/wiki/Hardware\_Specifications}.
 
 \begin{figure}
 	\centering
